--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -417,4 +417,15 @@ footer hr
     {
         color: #D43F52;
     }
+
+#contact .form-control.send-button{
+    background: #D43F52;
+    border: 2px solid transparent;
+    color: #ffffff;
+    font-weight: bold;
+    transition: all 0.4s ease-in-out;
+    height: 50px;
+}
+
+  
 /* end social icon */
