change portfolio & also need to work on mail send

--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -1,15 +1,9 @@
-/*
 
-Lavish HTML CSS Template
-
-https://templatemo.com/tm-458-lavish
-		
-*/
 
 body
 {
 	background: #000000;
-	color: #999;
+	color: rgb(255, 255, 255);
 	font-family: 'Raleway', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
